--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,16 +1,36 @@
+@font-face {
+  font-family: kolkerBrushRegular;
+  src: url("/KolkerBrush-Regular.ttf");
+}
+
+@font-face {
+  font-family: zhiMangXingRegular;
+  src: url("/ZhiMangXing-Regular.ttf");
+}
+
+@font-face {
+  font-family: jimNightshadeRegular;
+  src: url("/JimNightshade-Regular.ttf");
+}
+
 html,
 body {
-  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
   margin: 0;
   padding: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   height: 100%;
   width: 100%;
+  font-size: 1.5em;
+}
+
+* {
+  box-sizing: border-box;
 }
 
 main {
   height: 100%;
+  background: url("/background.jpg") no-repeat center center / cover;
 }
 
 .shaking {
@@ -52,4 +72,12 @@ main {
   100% {
     transform: translate(1px, -2px) rotate(-1deg);
   }
+}
+
+:lang(en) {
+  font-family: jimNightshadeRegular;
+}
+
+:lang(ch) {
+  font-family: [Chinese fonts];
 }
