--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,7 +21,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
   height: 100%;
   width: 100%;
-  font-size: 1.5em;
+  font-size: 1.2rem;
+  animation: fadeIn ease 2s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
 }
 
 * {
@@ -72,6 +75,42 @@ main {
   100% {
     transform: translate(1px, -2px) rotate(-1deg);
   }
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.fadeIn {
+  animation: fadeIn ease 1s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+}
+
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+.opacity0 {
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity 250ms ease-in, visibility 0ms ease-in 250ms;
+}
+
+.opacity1 {
+  visibility: visible;
+  opacity: 1;
+  transition-delay: 100ms;
 }
 
 :lang(en) {
